--- a/app/src/main/res/layout/activity_city_details.xml
+++ b/app/src/main/res/layout/activity_city_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CityDetailsActivity">
+    tools:context=".CityDetails">
 
     <TextView
         android:id="@+id/cityIdTextView"
