--- a/app/src/main/res/layout/activity_city_details.xml
+++ b/app/src/main/res/layout/activity_city_details.xml
@@ -6,42 +6,8 @@
     tools:context=".CityDetails">
 
     <TextView
-        android:id="@+id/cityIdTextView"
+        android:id="@+id/cityAux"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/cityLoginTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cityIdTextView"
-        android:layout_margin="16dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/citySizeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cityLoginTextView"
-        android:layout_margin="16dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/cityLocationTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/citySizeTextView"
-        android:layout_margin="16dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/cityNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cityLocationTextView"
-        android:layout_margin="16dp"
-        android:textSize="18sp" />
-
+        android:text="TextView" />
 </RelativeLayout>
