--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -1,28 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/nameTextView"
-        android:text="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="1"
         android:textAppearance="?android:attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/sizeTextView"
-        android:text="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="2"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/locationTextView"
         android:layout_width="wrap_content"
-        android:text="3"
         android:layout_height="wrap_content"
+        android:text="3"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
 
